Revert "Leader board Fixed Mobile View to have scrollbar and added tests"

--- a/src/App.css
+++ b/src/App.css
@@ -53,18 +53,19 @@ background-color: black;
 background-color: black
 }
 
+/* Small devices (landscape phones, 544px and up) */
+@media (max-width: 544px) {  
+  .leaderboard {font-size:0.7rem;} /*1rem = 16px*/
+}
+
 .bg-super {
-  background-color:#0000CD !important; /* medium blue #0000CD*/
+  background-color: indigo !important;
 }
 
 .bg-awesome {
-  background-color: #990099 !important; /*  violet */
+  background-color: violet !important;
 }
 
 .bg-super-awesome {
-  background-color: #660099 !important; /*  purple */
-}
-
-.bg-orange {
-  background-color: #FFA500 !important; /*  brighter orange */
+  background-color: purple !important;
 }
